--- a/.github/workflows/auto-update-html.yml
+++ b/.github/workflows/auto-update-html.yml
@@ -1,25 +1,12 @@
-name: Auto Update HTML
+name: Simple Cron Test
 
 on:
   schedule:
-    - cron: '* * * * *' 
-  workflow_dispatch:      
+    - cron: '* * * * *'
+  workflow_dispatch:
 
 jobs:
-  update-html:
+  print-time:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Update index.html
-        run: |
-          echo "<html><body><h1>Updated: $(date -u)</h1></body></html>" > index.html
-
-      - name: Commit and Push
-        run: |
-          git config --global user.name "devjob4475"
-          git config --global user.email "thananchai216@gmail.com"
-          git add index.html
-          git commit -m "Auto update HTML on $(date -u)" || echo "No changes to commit"
-          git push
+      - run: echo "The time is $(date -u)"
