--- a/.github/workflows/auto-update-html.yml
+++ b/.github/workflows/auto-update-html.yml
@@ -2,7 +2,7 @@ name: Simple Cron Test
 
 on:
   schedule:
-    - cron: '* * * * *'
+    - cron:  '*/15 * * * *'    # At every 15th minute
   workflow_dispatch:
 
 jobs:
