--- a/.github/workflows/auto-update-html.yml
+++ b/.github/workflows/auto-update-html.yml
@@ -80,5 +80,5 @@ jobs:
           git config --global user.name "devjob4475"
           git config --global user.email "thananchai216@gmail.com"
           git add index.html
-          git commit -m "Auto update HTML on $(date -u)" || echo "No changes to commit"
+          git commit -m "Auto update HTML on $(TZ='Asia/Bangkok' date)" || echo "No changes to commit"
           git push
