--- a/.github/workflows/auto-update-html.yml
+++ b/.github/workflows/auto-update-html.yml
@@ -57,6 +57,8 @@ jobs:
                   process.exit(1);
               }
 
+              const chunksUrl = clearUrl.replace('playlist.m3u8', 'chunks.m3u8');
+
               const output = `
               <html>
               <body>
@@ -67,7 +69,7 @@ jobs:
               ########################################
 
               #EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL-1
-              ${clearUrl}
+              ${chunksUrl}
               </body>
               </html>`;
               require('fs').writeFileSync('index.html', output);
