--- a/.github/workflows/auto-update-html.yml
+++ b/.github/workflows/auto-update-html.yml
@@ -1,106 +1,38 @@
-name: Simple Cron Test
+name: Run Index2 Script
 
 on:
   schedule:
-    - cron: '*/30 * * * *'  # Run every 30 minutes
-  workflow_dispatch:
+    - cron: '*/30 * * * *'  # Runs every 30 minutes
+  workflow_dispatch:  # Allows you to manually trigger the workflow
 
 jobs:
-  update-html:
+  run-script:
     runs-on: ubuntu-latest
+    
     steps:
+      # Step 1: Checkout the repository to the action runner
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      # Step 2: Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '18'  # Use the Node.js version that you prefer
 
+      # Step 3: Install dependencies
       - name: Install dependencies
-        run: npm install axios xml2js
+        run: npm install axios fs
 
-      - name: Run script to update index.html
-        run: |
-          node <<'EOF'
-          const axios = require("axios");
-          const fs = require("fs"); // Required for writing to index.html
-          
-          const loginUrl =
-            "https://cloud.ufxtv.com/api/user/login/?user_email=BE0268&user_password=1111&kauth=";
-          const playBaseUrl =
-            "https://cloud.ufxtv.com/api/tv/channels/play/?c=uflix-epl1&kauth=";
-          
-          // Function to get playlist URL
-          async function getPlaylist(user_loggedsession) {
-            const playUrl = `${playBaseUrl}&user_loggedsession=${user_loggedsession}`;
-            try {
-              const response = await axios.get(playUrl); // Using axios.get() for GET request
-              const text = response.data; // Access the response body using response.data
-              return text.includes("<clear_url>") ? text : null;
-            } catch (error) {
-              console.error("Error fetching playlist:", error);
-              return null;
-            }
-          }
-          
-          // Login to get session
-          async function login() {
-            try {
-              const response = await axios.get(loginUrl); // Using axios.get() for GET request
-              const text = response.data; // Access the response body using response.data
-              const sessionMatch = text.match(
-                /<user_loggedsession>(.*?)<\/user_loggedsession>/
-              );
-              return sessionMatch ? sessionMatch[1] : null;
-            } catch (error) {
-              console.error("Error logging in:", error);
-              return null;
-            }
-          }
-          
-          // Extract clear_url from XML response
-          function extractClearUrl(xml) {
-            const match = xml.match(/<clear_url>(.*?)<\/clear_url>/);
-            return match ? match[1] : null;
-          }
-          
-          // Generate and render playlist
-          function renderPlaylist(clearUrl) {
-            const fixedUrl = clearUrl.replace("playlist.m3u8", "chunks.m3u8");
-            const output = `
-                #EXTM3U
-                ########################################
-                ### Uflix ### 
-                ########################################
-                #EXTINF:-1 group-title="กีฬา" tvg-logo="https://static.uflixtv.com/images/tv/channels_icons/epl-1.png",EPL-1
-                ${fixedUrl}
-                `;
-            return output; // Return the rendered playlist
-          }
-          
-          // Start the process
-          (async function () {
-            const session = await login();
-            if (session) {
-              const xmlData = await getPlaylist(session);
-              const clearUrl = extractClearUrl(xmlData);
-              if (clearUrl) {
-                const playlist = renderPlaylist(clearUrl);
-                fs.writeFileSync("index.html", playlist); // Write the playlist to index.html
-              } else {
-                console.error("No clear_url found in the response");
-              }
-            } else {
-              console.error("Login failed");
-            }
-          })();
-          EOF
+      # Step 4: Run the script
+      - name: Run index2.js script
+        run: node index2.js
 
-      - name: Commit and Push
+      # Step 5: Commit and push changes if index.html is updated
+      - name: Commit and Push updated index.html
         run: |
           git config --global user.name "devjob4475"
           git config --global user.email "thananchai216@gmail.com"
           git add index.html
-          git commit -m "Auto update HTML on $(TZ='Asia/Bangkok' date)" || echo "No changes to commit"
+          git commit -m "Auto update HTML"
           git push
