--- a/.github/workflows/auto-update-html.yml
+++ b/.github/workflows/auto-update-html.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config --global user.name "devjob4475"
           git config --global user.email "thananchai216@gmail.com"
-          git add index.html
+          git add index2.html
           git commit -m "Auto update HTML"
           git push
