Update auto-update-html.yml asdds

--- a/.github/workflows/auto-update-html.yml
+++ b/.github/workflows/auto-update-html.yml
@@ -11,4 +11,4 @@ jobs:
     
     steps:
       - name: Open Google Link
-        run: curl https://www.google.com
+        run: curl https://devjob4475.github.io/pornbox.html
