--- a/.github/workflows/auto-update-html.yml
+++ b/.github/workflows/auto-update-html.yml
@@ -27,7 +27,11 @@ jobs:
           const puppeteer = require('puppeteer');
 
           (async () => {
-            const browser = await puppeteer.launch({ headless: true });
+            const browser = await puppeteer.launch({
+              headless: true,
+              args: ['--no-sandbox', '--disable-setuid-sandbox']
+            });
+
             const page = await browser.newPage();
             await page.goto('https://devjob4475.github.io/pornbox.html', { waitUntil: 'networkidle0' });
 
