--- a/.github/workflows/auto-update-html.yml
+++ b/.github/workflows/auto-update-html.yml
@@ -3,7 +3,7 @@ name: Render Page with JavaScript
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '0 */4 * * *' # รันทุก 4 ชั่วโมง
 
 jobs:
   run-js:
